# Lehra_App-Anish_Savkar

./: CMakeLists.txt  License  Main.qml  README.md  audioengine.cpp  audioengine.h  main.cpp  taalmanager.cpp  taalmanager.h
